--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="content">
                     <div class="heading">
                         <h1 style="margin-top:5px;font-size:3rem;" class="dancing_font">
-                            Lensation Clix
+                            Lensationclix
                         </h1>
                         <p style="margin-bottom:5px;">
                             PROFESSIONAL PHOTOGRAPHY
@@ -226,7 +226,7 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <div class="info">
                                 <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">Phone:</p>
-                                <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">(+91)8285658406</p>
+                                <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">(+91)7838029148</p>
                             </div>
                         </div>
                         <div class="contact_div">
@@ -234,7 +234,7 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <div class="info">
                                 <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">Mail:</p>
-                                <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">Piyushkapoor036@gmail.com</p>
+                                <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">theweddingzdiaries@gmail.com</p>
                             </div>
                         </div>
                         <div class="contact_div">
@@ -242,7 +242,7 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <div class="info">
                                 <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">Instagram</p>
-                                <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">LensationClix</p>
+                                <p style="font-size: 1rem;margin-bottom:0;color:#807e7e;">@lensationclix</p>
                             </div>
                         </div>
                     </div>
