--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="about-div">
                         <h1 class="dancing_font heads">About Me</h1>
                         <img style="margin-top:20px; margin-bottom:20px;" class="img-fluid" src="./assets/break.png" alt="line-break" />
-                        <p class="about_text">LensationClix is a creative photo studio providing a great number of photo services. 
+                        <p class="about_text">Lensationclix is a creative photo studio providing a great number of photo services. 
                                                       We are passionate about photography and gladly share this passion with you. We are a team 
                                                       of enthusiasts who do their best to meet any client&#39;s demand and provide them with perfectly made photos. 
                                                       We capture the moments of your life!</p>
@@ -202,7 +202,7 @@
                 <div class="footer_about">
                     <h5 class="foot_heading">About</h5>
                     <p style="font-size: 1rem;line-height:1.7;color:#807e7e;">
-                        LensationClix is a creative photo studio providing a great number of photo services. 
+                        Lensationclix is a creative photo studio providing a great number of photo services. 
                         We are passionate about photography and gladly share this passion with you.  
                     </p>
                     <img class="img-fluid foot_logo" src="./assets/logo.png" alt="logo">
